2010-07-03  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix DumpRenderTree userStyleSheet handling.
        https://bugs.webkit.org/show_bug.cgi?id=41570

        DumpRenderTree did only set the userStyleSheet at
        layoutTestController.setUserStyleSheetEnabled().

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::reset):
        (LayoutTestController::setUserStyleSheetLocation):
        (LayoutTestController::setUserStyleSheetEnabled):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

2010-07-03  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] support dumpChildFrameScrollPositions

        https://bugs.webkit.org/show_bug.cgi?id=41088

        Unskip:

        http/tests/navigation/anchor-subframeload.html
        http/tests/navigation/relativeanchor-frames.html

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::dumpFrameScrollPosition):
        (WebCore::DumpRenderTree::dump):
        * DumpRenderTree/qt/DumpRenderTreeQt.h:
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::reset):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:
        (LayoutTestController::shouldDumpChildFrameScrollPositions):
        (LayoutTestController::dumpChildFrameScrollPositions):

2010-07-02  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Rename new scripts so that they don't make autocompleting run-webkit-tests annoying.

        * Scripts/debug-test-runner: Copied from Scripts/debug-webkittestrunner.
        * Scripts/debug-webkittestrunner: Removed.
        * Scripts/run-test-runner: Copied from Scripts/run-webkittestrunner.
        * Scripts/run-webkittestrunner: Removed.

2010-07-02  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Steve Falkenburg.

        Some http tests fail on Windows with Cygwin 1.7