@@ -1,3 +1,15 @@
+2010-07-04  MORITA Hajime  <morrita@google.com>
+
+        rebaseline-chromium-webkit-tests: UnicodeDecodeError
+        https://bugs.webkit.org/show_bug.cgi?id=41589
+
+        * run() method can result non-utf-8 bytes, that causes utf-8
+          decoding fail.  Fixed to disable decoding.
+        * Fixed Git.find_checkout_root() to make a test pass.
+
+        * Scripts/webkitpy/common/checkout/scm.py:
+        * Scripts/webkitpy/common/checkout/scm_unittest.py:
+
 2010-07-03  Patrick Gansterer  <paroga@paroga.com>
 
         Reviewed by Simon Hausmann.
